--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": ["travel", "agent", "booking", "destinations"],
+  "keywords": [
+    "travel",
+    "agent",
+    "booking",
+    "destinations"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
